test: update KYC policy test board
