# typescript/src/swagger/sdk.openapi.json
@@ -222,9 +222,6 @@
                     "email": {
                         "type": "string"
                     },
-                    "kyc_policy_id": {
-                        "type": "string"
-                    },
                     "user_id": {
                         "type": "string"
                     }
@@ -255,9 +252,6 @@
                         "$ref": "#/components/schemas/Country"
                     },
                     "email": {
-                        "type": "string"
-                    },
-                    "kyc_policy_id": {
                         "type": "string"
                     },
                     "user_id": {
